--- a/interface/css/style.css
+++ b/interface/css/style.css
@@ -3,7 +3,7 @@ html, body {
 }
 
 body {
-    background-color:#F0F5F5;
+    background-color:#FFF;
     padding: 0; margin: 0;
 }
 
@@ -51,4 +51,30 @@ body {
 img {
     height: 30px;
     width: auto;
+}
+
+/* This is how you would create a theme called "my-custom-theme": */
+
+.ts-error {
+	border-radius: 5px;
+	border: 2px solid #F00;
+	background: #C44;
+	color: #fff;
+}
+/* Use this next selector to style things like font-size and line-height: */
+.ts-error .tooltipster-content {
+	font-family: Arial, sans-serif;
+	font-size: 14px;
+	line-height: 16px;
+	padding: 8px 10px;
+}
+
+.ace_gutter-cell.ace_breakpoint {
+    border-radius: 20px 0px 0px 20px;
+    box-shadow: 0px 0px 1px 1px red inset;
+}
+
+.ace_gutter-cell {
+    padding-left: 0 !important;
+    /* this makes the Breakpoints work. */
 }
