Formatted a bit better the memory view

--- a/interface/css/style.css
+++ b/interface/css/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 .regVal {
-    width: 50px;
+    width: 65px;
 }
 
 #content {
@@ -83,4 +83,12 @@ img {
     position: absolute;
     background: rgba(100,200,100,0.5);
     z-index: 20;
+}
+
+#memoryview th {
+    width: 26px;
+}
+
+#memoryview td {
+    text-align: center;
 }
