--- a/interface/css/style.css
+++ b/interface/css/style.css
@@ -7,6 +7,11 @@ body {
     padding: 0; margin: 0;
 }
 
+h4 {
+    font-size: 0.9em;
+    margin: 0.8em 0 0;
+}
+
 #regView {
     vertical-align: top;
 }
@@ -140,11 +145,24 @@ img {
     border-radius: 5px;
 }
 
-#registers tr:nth-child(odd) td {
+.registers_container {
+    border: 1px solid #333;
+}
+
+.registers tr:nth-child(odd) td {
     background-color: #f9f9f9;
 }
-#registers th, #registers td {
+.registers th, .registers td {
     text-align: right;
     font-family: "Lucida Console", Monaco, monospace;
     font-size: 0.8em;
 }
+
+/* Tabs */
+.etabs { margin: 0; padding: 0; }
+.tab { display: inline-block; zoom:1; *display:inline; background: #eee; border: solid 1px #999; border-bottom: none; -moz-border-radius: 4px 4px 0 0; -webkit-border-radius: 4px 4px 0 0; }
+.tab a { font-size: 10px; line-height: 1.5em; display: block; padding: 0 10px; outline: none; }
+.tab a:hover { text-decoration: underline; }
+.tab.active { background: #fff; position: relative; top: 1px; border-color: #666; }
+.tab a.active { font-weight: bold; }
+.tab-container .panel-container { background: #fff; border: solid #666 1px; padding: 10px; -moz-border-radius: 0 4px 4px 4px; -webkit-border-radius: 0 4px 4px 4px; }
