Fixed error appearing outside of viewport

--- a/interface/css/style.css
+++ b/interface/css/style.css
@@ -190,7 +190,7 @@ img {
 #message_bar{
   cursor: pointer;
   display: none;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   height: 50px;
