--- a/interface/css/style.css
+++ b/interface/css/style.css
@@ -136,10 +136,11 @@ img {
     font-weight: ;
 }
 
-.debug_line {
+.debug_line.ace_start {
     position: absolute;
     background: rgba(100,200,100,0.5);
     z-index: 20;
+    width: 100% !important;
 }
 
 #memoryview th {
