--- a/interface/static/css/style.css
+++ b/interface/static/css/style.css
@@ -87,10 +87,11 @@ h4 {
     margin: 0.8em 0 0;
 }
 
-select, button {
+select, button, input[type=submit] {
     background-color: #28648F;
     border: 1px solid #1476BD;
     color: #FFF;
+    height: 1.6em;
 }
 
 #disassembly {
@@ -121,7 +122,7 @@ select, button {
 }
 
 .regVal {
-    width: 65px;
+    width: 100px;
     font-family: monospace;
 }
 
@@ -234,23 +235,23 @@ img {
     /* this makes the Breakpoints work. */
 }
 
+.ace_keyword {
+    color: #FB2472 !important;
+}
 .ace_asmcomment {
-    color: #666;
+    color: #95989A;
     font-style: italic;
 }
-
 .ace_sectiontitle {
     font-weight: bold;
-    color: #600;
+    color: #FB2472;
 }
-
 .ace_memdeclare {
-    color: #A00;
+    color: #63D8E8;
     font-weight: bold;
 }
-
 .ace_label {
-    color: #A0A;
+    color: #A477FF;
     font-weight: ;
 }
 
@@ -269,7 +270,7 @@ img {
 }
 
 #memoryview {
-    height: 440px;
+    height: 390px;
 }
 #memoryview th {
     width: 16px;
@@ -288,16 +289,22 @@ img {
     border: 1px solid transparent;
 }
 .mem_r {
-    background-color: red;
+    background-color: #4D878F;
 }
 .mem_w {
-    background-color: green;
+    background-color: #9A2D54;
 }
 .mem_rw {
-    background-color: yellow;
+    background-color: #6E569B;
+}
+.mem_e.help {
+    border: 2px solid red !important;
 }
 .mem_e {
     border: 1px solid red !important;
+}
+.mem_instr.help {
+    border: 2px solid green !important;
 }
 .mem_instr {
     border: 1px solid green !important;
