--- a/interface/static/css/style.css
+++ b/interface/static/css/style.css
@@ -120,10 +120,14 @@ select, button, input[type=submit] {
     text-align: center !important;
 }
 
-.reg_r_cb, .reg_w_cb {
-    width: 12px;
-    margin: 3px 0;
-    padding: 0;
+.reg_bkp_w td {
+    background-color: #9A2D54 !important;
+}
+.reg_bkp_r td {
+    background-color: #4D878F !important;
+}
+.reg_bkp_w.reg_bkp_r td {
+    background-color: #6E569B !important;
 }
 
 .regVal {
