--- a/interface/static/css/style.css
+++ b/interface/static/css/style.css
@@ -100,6 +100,26 @@ select, button, input[type=submit] {
     font-size: 1.1em;
 }
 
+.top_buttons img {
+    vertical-align: middle;
+}
+
+#run:disabled img {
+    content:url("/static/image/run_disabled.png");
+}
+
+#stepin:disabled img {
+    content:url("/static/image/into_disabled.png");
+}
+
+#stepforward:disabled img {
+    content:url("/static/image/over_disabled.png");
+}
+
+#stepout:disabled img {
+    content:url("/static/image/out_disabled.png");
+}
+
 select:disabled, button:disabled, input[type=submit]:disabled {
     background-color: #383737;
     border: 1px solid #7E8082;
