Made memory viewer fixed height

--- a/interface/static/css/style.css
+++ b/interface/static/css/style.css
@@ -326,6 +326,12 @@ img {
     width: 100% !important;
 }
 
+#memoryview {
+    font-size: 10pt;
+    width: 100%;
+    height: 390px;
+}
+
 #memoryview th {
     width: 17px;
     font-size: 14px;
