Removed extraneous comments. Made purple in énoncés lighter

--- a/interface/static/css/style.css
+++ b/interface/static/css/style.css
@@ -501,7 +501,7 @@ img {
     white-space: pre;
     font-family: monospace;
     margin: 1em 0 1em;
-    color: #A477FF;
+    color: #bea3f5;
 }
 
 /* Light mode */
