--- a/interface/static/css/style.css
+++ b/interface/static/css/style.css
@@ -32,7 +32,10 @@ body {
 .left_item_inner {
     position: absolute;
     bottom: 0;
-    width: 100%;
+    padding: 5px;
+    width: -webkit-calc(100% - 10px);
+    width:    -moz-calc(100% - 10px);
+    width:         calc(100% - 10px);
 }
 
 .current_page {
@@ -551,4 +554,96 @@ img {
 .lightmode #memoryview {
     background-color: #FFF;
     color: #000;
+}
+
+/* Session side panel */
+#slideout {
+    margin-top: 5px;
+}
+
+#slideout_inner {
+    position: fixed;
+    top: 0px;
+    left: -350px;
+    -webkit-transition-duration: 0.2s;
+    -moz-transition-duration: 0.2s;
+    -o-transition-duration: 0.2s;
+    transition-duration: 0.2s;
+    height: 100%;
+    background-color: #28648F;
+    width: 350px;
+    overflow-y: auto;
+    z-index : 10;
+}
+
+#slideout:hover #slideout_inner {
+    left: 0px;
+}
+
+.session_item {
+    margin: 2px 2px 0px 2px;
+    width: -webkit-calc(100% - 2px - 10px);
+    width:    -moz-calc(100% - 2px - 10px);
+    width:         calc(100% - 2px - 10px);
+    text-align: left;
+    background-color: #383737;
+    float: right;
+    padding: 5px;
+}
+
+#selected.session_item {
+    background-color: #28648F;
+}
+
+.right_item_inner {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+#slide_buttons {
+    padding: 5px;
+    margin: 2px 2px 2px 2px;
+    background-color: #383737;
+}
+
+#slide_buttons button{
+    margin: 2px 2px 2px 2px;
+}
+
+.delete_button {
+    background-color: #b75b5b !important;
+}
+
+.session_item_right {
+    float: right;
+    vertical-align: bottom;
+    height:100%;
+    width: 85%;
+}
+
+#session_id {
+    font-weight: bold;
+    font-size: 200%;
+    padding: 10px 5px 10px 5px;
+    float: left;
+    vertical-align: bottom;
+    height:100%;
+}
+
+#session_name {
+    font-weight: bold;
+}
+
+.left_item_inner_top {
+    font-size: 150%;
+    height: 50%;
+    font-weight: bold;
+    padding: 5px 0px 5px 0px;
+}
+
+#slideout .left_item_inner {
+    font-size: 90%;
+    height: 50%;
+    padding: 5px 5px 2px 5px;
 }
