WIP: Integration simulatorv2 with the webUI

--- a/interface/static/css/style.css
+++ b/interface/static/css/style.css
@@ -123,6 +123,10 @@ select, button, input[type=submit] {
     content:url("/static/image/out_disabled.png");
 }
 
+#stepback:disabled img {
+    content:url("/static/image/back_disabled.png");
+}
+
 select:disabled, button:disabled, input[type=submit]:disabled {
     background-color: #383737;
     border: 1px solid #7E8082;
