Added bootstrap to enonces&solutions + minified css

--- a/interface/static/css/style.css
+++ b/interface/static/css/style.css
@@ -83,7 +83,6 @@ body {
 }
 
 h1 {
-    width: 600px;
     border-bottom: 3px solid #28648F;
 }
 
@@ -234,11 +233,6 @@ select:disabled, button:disabled, input[type=submit]:disabled {
 #stdout_ {
     width: 300px;
     height: 100px;
-}
-
-img {
-    /* height: 30px;
-    width: auto;*/
 }
 
 .ts-error {
@@ -493,8 +487,11 @@ img {
   font-size: 1.1em;
 }
 
-#enonce {
-    max-width: 700px;
+#solution pre {
+    color: inherit !important;
+    background: none !important;
+    border: none !important;
+    font-weight: bold;
 }
 
 .pre {
